--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/strapi": "^0.3.1",
     "core-js": "^3.9.1",
     "gsap": "^3.6.1",
+    "markdown-it-highlightjs": "^3.4.0",
     "markdown-it-modify-token": "^1.0.2",
     "nes.css": "^2.3.0",
     "nuxt": "^2.15.3",
